# SAWARATSUKI.ServiceLogos

./: .gitignore  README-ja.md  README-zh.md  README-zhHans.md  README-zhHant.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  fix-request-ja.yaml  fix-request-ja.yml  fix-request.yaml  fix-request.yml  http-request.yml  normal_issue.yaml  request-ja.yaml  request-ja.yml  request.yaml  request.yml  request_zhHans.yml
.github/PULL_REQUEST_TEMPLATE/: add_logo_PR_template.md  pull_request_template.md
.github/workflows/: auto-release.yml  update-readme.yml
ReplaceGuide/Rider/: Rider-en.md  Rider-jp.md  Rider-zh.md
docs/: README-es.md  README-fr.md  README-hi.md  README-id.md  README-ja.md  README-zhHans.md  README-zhHant.md  README.md  generate-images-table.py
docs/ReplaceGuide/Rider/: Rider-en.md  Rider-jp.md  Rider-zh.md
docs/scripts/: generate-changelog.py  generate-images-table.py
